# lotdd

./: .gitignore  geneclipseprj  readme.txt  rebuild
soundex/: CMakeLists.txt  Soundex.h  SoundexTest.cpp  rebuild
src/pds/: AddressExtractorTest.cpp  CMakeLists.txt
src/soundex/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
